--- a/src/styles/Camera.module.css
+++ b/src/styles/Camera.module.css
@@ -54,3 +54,12 @@
 .next:disabled {
   opacity: 0.2;
 }
+
+.video {
+  position: fixed;
+  top: 0%;
+  bottom: 0%;
+  left: 0%;
+  right: 0%;
+  width: 100vw;
+}
