--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,3 +4,14 @@
   box-sizing: border-box;
   outline: none;
 }
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  //   object-fit: cover;
+}
+
+.swiper-slide {
+  width: 60% !important;
+}
