feat: Add Blue Sky Standard Font

--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -20,9 +20,9 @@
 }
 
 .top h1 {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Blue Sky Standard", sans-serif;
   font-style: normal;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 35px;
   line-height: 42px;
   text-align: center;
@@ -40,7 +40,7 @@
 .bottom button {
   padding: 14px 50px;
   border: 1px solid #ffffff;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Blue Sky Standard", sans-serif;
   font-style: normal;
   font-weight: 420;
   font-size: 16px;
