--- a/src/styles/Share.module.scss
+++ b/src/styles/Share.module.scss
@@ -23,9 +23,9 @@
 
 .top h1 {
   margin-bottom: 90px;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Blue Sky Standard", sans-serif;
   font-style: normal;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 25px;
   line-height: 30px;
   text-align: center;
@@ -37,7 +37,7 @@
 .top button {
   width: 158px;
   height: 43px;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Blue Sky Standard", sans-serif;
   font-style: normal;
   font-weight: 420;
   font-size: 16px;
@@ -59,7 +59,7 @@
   background-color: transparent;
   width: 133px;
   height: 43px;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Blue Sky Standard", sans-serif;
   font-style: normal;
   font-weight: 420;
   font-size: 16px;
