--- a/src/styles/Camera.module.scss
+++ b/src/styles/Camera.module.scss
@@ -14,7 +14,7 @@
 }
 
 .top h1 {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Blue Sky Standard", sans-serif;
   font-style: normal;
   font-weight: 420;
   font-size: 25px;
