--- a/src/styles/Create.module.scss
+++ b/src/styles/Create.module.scss
@@ -27,9 +27,9 @@
   p {
     position: absolute;
     top: 10px;
-    font-family: "Montserrat", sans-serif;
+    font-family: "Blue Sky Standard", sans-serif;
     font-style: normal;
-    font-weight: 300;
+    font-weight: 400;
     font-size: 25px;
     line-height: 25px;
     color: #ffffff;
@@ -42,9 +42,9 @@
   p {
     position: absolute;
     bottom: 10px;
-    font-family: "Montserrat", sans-serif;
+    font-family: "Blue Sky Standard", sans-serif;
     font-style: normal;
-    font-weight: 300;
+    font-weight: 400;
     font-size: 25px;
     line-height: 25px;
     color: #ffffff;
@@ -62,7 +62,7 @@
   gap: 30px;
 }
 .gallarySlider p {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Blue Sky Standard", sans-serif;
   font-style: normal;
   font-weight: 420;
   font-size: 16px;
@@ -114,7 +114,7 @@
   background: #000000;
   border: 1px solid #000000;
   padding: 14px 50px;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Blue Sky Standard", sans-serif;
   font-style: normal;
   font-weight: 420;
   font-size: 16px;
