--- a/src/styles/Email.module.scss
+++ b/src/styles/Email.module.scss
@@ -19,7 +19,7 @@
   border: none;
   padding-bottom: 20px;
   border-bottom: 1px solid #000000;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Blue Sky Standard", sans-serif;
   font-style: normal;
   font-weight: 420;
   font-size: 16px;
@@ -41,7 +41,7 @@
   height: 43px;
   border: 1px solid #000000;
   background-color: #ffffff;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Blue Sky Standard", sans-serif;
   font-style: normal;
   font-weight: 420;
   font-size: 16px;
@@ -53,7 +53,7 @@
   height: 43px;
   border: 1px solid #000000;
   background-color: #000000;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Blue Sky Standard", sans-serif;
   font-style: normal;
   font-weight: 420;
   font-size: 16px;
