--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,26 @@
   outline: none;
 }
 
+@font-face {
+  font-family: "Blue Sky Standard";
+  src: local("Blue Sky Standard Light"), local("Blue-Sky-Standard-Light"),
+    url("../../public/BlueSkyStandard-Light.woff2") format("woff2"),
+    url("../../public/BlueSkyStandard-Light.woff") format("woff"),
+    url("../../public/BlueSkyStandard-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Blue Sky Standard";
+  src: local("Blue Sky Standard Regular"), local("Blue-Sky-Standard-Regular"),
+    url("../../public/BlueSkyStandard-Regular.woff2") format("woff2"),
+    url("../../public/BlueSkyStandard-Regular.woff") format("woff"),
+    url("../../public/BlueSkyStandard-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
 .swiper-slide img {
   display: block;
   width: 100%;
