--- a/src/styles/Create.module.scss
+++ b/src/styles/Create.module.scss
@@ -20,6 +20,29 @@
   gap: 10px;
 }
 
+.vision {
+  position: absolute;
+  top: 10px;
+  z-index: 1;
+  font-family: "Blue Sky Standard";
+  font-style: normal;
+  font-weight: 420;
+  font-size: 25px;
+  line-height: 25px;
+  color: #ffffff;
+}
+.action {
+  position: absolute;
+  bottom: 10px;
+  z-index: 1;
+  font-family: "Blue Sky Standard";
+  font-style: normal;
+  font-weight: 420;
+  font-size: 25px;
+  line-height: 25px;
+  color: #ffffff;
+}
+
 .imageWrapperTop {
   position: relative;
   display: flex;
