--- a/src/styles/Camera.module.scss
+++ b/src/styles/Camera.module.scss
@@ -40,6 +40,11 @@
   background-color: #ffffff;
   border: 1px solid #000000;
   color: #000000;
+  font-family: "Blue Sky Standard";
+  font-style: normal;
+  font-weight: 420;
+  font-size: 16px;
+  line-height: 16px;
 }
 
 .next {
@@ -48,6 +53,11 @@
   background-color: #000000;
   border: 1px solid #000000;
   color: #ffffff;
+  font-family: "Blue Sky Standard";
+  font-style: normal;
+  font-weight: 420;
+  font-size: 16px;
+  line-height: 16px;
 }
 
 .retake:disabled,
