style: Draft 2 updates

--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
   height: 100vh;
-  background-image: url("../../public/Photo-booth.png");
+  background-image: url("../../public/homeBackground.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
