--- a/src/styles/Create.module.scss
+++ b/src/styles/Create.module.scss
@@ -1,9 +1,9 @@
 .wrapper {
-  height: 100vh;
+  height: 85vh;
   width: 100vw;
   overflow: hidden;
   padding-top: 40px;
-  padding-bottom: 120px;
+  // padding-bottom: 120px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -12,12 +12,24 @@
 .galleryWrapper {
   display: flex;
   flex-direction: column;
-  gap: 40px;
+  // gap: 40px;
+}
+
+.title {
+  font-family: "Blue Sky Standard";
+  font-style: normal;
+  font-weight: 420;
+  font-size: 16px;
+  line-height: 16px;
+  text-align: center;
+  color: #000000;
+  margin-bottom: 20px;
 }
 .gallary {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  margin-bottom: 50px;
 }
 
 .vision {
@@ -92,7 +104,7 @@
 .gallarySlider {
   display: flex;
   align-items: center;
-  padding: 0px 10px;
+  padding: 0px 20px;
   gap: 30px;
 }
 .gallarySlider p {
