--- a/src/styles/Email.module.scss
+++ b/src/styles/Email.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
-  height: 100vh;
-  padding: 153px 0px 120px 0px;
+  height: 85vh;
+  padding: 153px 0px 0px 0px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -13,8 +13,28 @@
 .top .inputWrapper {
   width: 100%;
   padding: 0px 20px;
+
+  .info {
+    font-family: "Blue Sky Standard";
+    font-style: normal;
+    font-weight: 420;
+    font-size: 10px;
+    line-height: 12px;
+
+    color: #9c9da8;
+  }
+
+  .error {
+    font-family: "Blue Sky Standard";
+    font-style: normal;
+    font-weight: 420;
+    font-size: 10px;
+    line-height: 12px;
+    color: #d5423a;
+  }
 }
 .top .inputWrapper input {
+  margin-bottom: 10px;
   width: 100%;
   border: none;
   padding-bottom: 20px;
@@ -47,6 +67,9 @@
   font-size: 16px;
   line-height: 16px;
   color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .send {
   width: 153px;
