--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -1,15 +1,21 @@
 .wrapper {
-  height: 100vh;
-  background-image: url("../../public/homeBackground.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  height: 85vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   padding-top: 100px;
-  padding-bottom: 120px;
+
+  .backgroungImage {
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    top: 0%;
+    background-image: url("../../public/homeBackground.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
 
 .top {
@@ -17,6 +23,7 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  position: relative;
 }
 
 .top h1 {
@@ -35,6 +42,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .bottom button {
