--- a/src/styles/Share.module.scss
+++ b/src/styles/Share.module.scss
@@ -1,13 +1,20 @@
 .wrapper {
-  height: 100vh;
-  background-image: url("../../public/shareBackground.png");
-  background-position: top;
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding: 100px 0px 120px 0px;
+  height: 85vh;
+  padding: 100px 0px 0px 0px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  .backgroungImage {
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    top: 0%;
+    background-image: url("../../public/shareBackground.png");
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
 
 .top {
@@ -15,6 +22,7 @@
   flex-direction: column;
   align-items: center;
   margin: 0px 30px;
+  position: relative;
 }
 
 .top img {
@@ -106,6 +114,7 @@
   align-items: center;
   justify-content: center;
   gap: 12px;
+  position: relative;
 }
 
 .bottom button {
