style: Add padding bottom 20px

--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: space-between;
   padding-top: 100px;
+  padding-bottom: 20px;
 
   .backgroungImage {
     position: fixed;
