--- a/src/styles/Create.module.scss
+++ b/src/styles/Create.module.scss
@@ -3,7 +3,7 @@
   width: 100vw;
   overflow: hidden;
   padding-top: 40px;
-  // padding-bottom: 120px;
+  padding-bottom: 20px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
